Fixed more tests in HttpClientTests.